2001-10-10  Mikael Hallendal  <micke@codefactory.se>

	* src/devhelp-search.c (devhelp_search_complete_idle): 
	- call bookshelf_open_document before signaling, fixes
	  link-clicking problem.

2001-09-04  Mikael Hallendal  <micke@codefactory.se>

	* src/devhelp-window.c (devhelp_window_new): set wmclass.

2001-09-02  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl.

2001-08-31  Mikael Hallendal  <micke@codefactory.se>

	* src/devhelp-window.c:
	(devhelp_window_populate): added frames around the stuff in the
	paned.

2001-08-26  Yanko Kaneti  <yaneti@declera.com>

	* Makefile.am: fix schemas_DATA when --disable-install-schemas 
	was not used.

2001-08-26  Mikael Hallendal  <micke@codefactory.se>

	* ui/GNOME_DevHelp_Controller.ui: 
	- added tooltip for CmdBookManager.

	* ui/GNOME_DevHelp.ui:
	- added tooltips
	- removed moved command.
	- use BonoboUI statusbar.

	* src/devhelp-window.c:
	- RHult informed me that I should use the statusbar API from
	  BonoboUI instead. Here we go...
	(devhelp_window_on_url_cb): updated to use BonoboUI statusbar
	  instead.
	(devhelp_window_populate): no need for using GtkStatusbar. 

	* src/devhelp-window.c:
	- Fixes bug #202.
	(devhelp_window_link_clicked_cb): changed argument order.
	(devhelp_window_on_url_cb): added/impl. Sets the statusbar when
	  mouse over a link.
	(devhelp_window_populate): 
	- Moved a couple of containers from priv-struct to local. 
	- Added statusbar
	- Connect to "on_url" from html_widget.

	* ui/GNOME_DevHelp_Controller.ui: added tip for forward/back.

	* src/devhelp-controller.c:
	(cmd_forward_cb): check if forward list exists.
	(cmd_back_cb): check if prev list exists.

	* ui/GNOME_DevHelp.ui: added submenu for font size.

	* src/book-index.c:
	(book_index_get_scrolled): don't want to emit signal when setting
	  selection mode. fixes bug #200.

	* ui/GNOME_DevHelp.ui: removed Edit-menu

	* src/devhelp-controller.c: