@@ -1,3 +1,9 @@
+2001-10-11  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/Makefile.am (EXTRA_DIST): added GNOME_DevHelp.oaf.in.in
+
+	* ui/Makefile.am (EXTRA_DIST): added ui_DATA
+
 2001-10-10  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/devhelp-search.c (devhelp_search_complete_idle): 
